--- a/app/src/main/res/layout/aqi_detail_layout.xml
+++ b/app/src/main/res/layout/aqi_detail_layout.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/margin_16">
+    android:paddingTop="@dimen/margin_16"
+    tools:ignore="SpUsage">
     <TextView
         android:id="@+id/airQualityTitle"
         android:layout_width="wrap_content"
