--- a/app/src/main/res/layout/cloud_pressure_visibility_detail_layout.xml
+++ b/app/src/main/res/layout/cloud_pressure_visibility_detail_layout.xml
@@ -8,7 +8,8 @@
     android:orientation="horizontal"
     android:paddingTop="@dimen/margin_16"
     android:paddingBottom="@dimen/margin_16"
-    android:weightSum="3">
+    android:weightSum="3"
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="0dp"
