--- a/app/src/main/res/layout/daily_forecast_item.xml
+++ b/app/src/main/res/layout/daily_forecast_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/margin_12"
-    android:paddingBottom="@dimen/margin_12">
+    android:paddingBottom="@dimen/margin_12"
+    tools:ignore="SpUsage">
 
     <TextView
         android:id="@+id/date_forecast"
