--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -8,7 +8,8 @@
     android:clipChildren="false"
     android:clipToPadding="false"
     android:orientation="vertical"
-    tools:context=".MainFragments.HomeScreenFragment">
+    tools:context=".MainFragments.HomeScreenFragment"
+    tools:ignore="SpUsage">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/home_layout"
