--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pureWhite"
-    tools:context=".MainFragments.SettingFragment">
+    tools:context=".MainFragments.SettingFragment"
+    tools:ignore="SpUsage">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -326,7 +327,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:background="@color/default_button_bg"
-                        android:text="@string/picture"
+                        android:text="@string/weatherPhoto"
                         android:textAllCaps="false"
                         android:textColor="@color/pureWhite"
                         android:textSize="@dimen/text_view_14dp"
