--- a/app/src/main/res/layout/photo_details_layout.xml
+++ b/app/src/main/res/layout/photo_details_layout.xml
@@ -11,7 +11,8 @@
     android:padding="@dimen/margin_16"
     android:visibility="invisible"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    app:layout_constraintTop_toTopOf="parent"
+    tools:ignore="SpUsage">
 
     <TextView
         android:id="@+id/photo_detail_title"
