--- a/app/src/main/res/layout/welcome_slide_video.xml
+++ b/app/src/main/res/layout/welcome_slide_video.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_screen1"
     android:orientation="vertical"
-    android:weightSum="3">
+    android:weightSum="3"
+    tools:ignore="SpUsage">
 
     <VideoView
         android:id="@+id/videoView"
