--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -134,8 +134,14 @@
   <dimen name="text_view_12dp">
     12dp
   </dimen>
+  <dimen name="text_view_13dp">
+    13dp
+  </dimen>
   <dimen name="text_view_14dp">
     14dp
+  </dimen>
+  <dimen name="text_view_15dp">
+    15dp
   </dimen>
   <dimen name="text_view_16dp">
     16dp
