--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -134,8 +134,14 @@
   <dimen name="text_view_12dp">
     13.7dp
   </dimen>
+  <dimen name="text_view_13dp">
+    14.84dp
+  </dimen>
   <dimen name="text_view_14dp">
     15.98dp
+  </dimen>
+  <dimen name="text_view_15dp">
+    17.13dp
   </dimen>
   <dimen name="text_view_16dp">
     18.27dp
