--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,7 +44,9 @@
     <dimen name="icon_48dp">48dp</dimen>
     <dimen name="big_text">72sp</dimen>
     <dimen name="text_view_12dp">12dp</dimen>
+    <dimen name="text_view_13dp">13dp</dimen>
     <dimen name="text_view_14dp">14dp</dimen>
+    <dimen name="text_view_15dp">15dp</dimen>
     <dimen name="text_view_16dp">16dp</dimen>
     <dimen name="text_view_18dp">18dp</dimen>
     <dimen name="text_view_20dp">20dp</dimen>
