--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -26,7 +26,7 @@
                 android:layout_height="@dimen/icon_90dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="@dimen/margin_n_16"
-                android:padding="@dimen/margin_16"
+                android:padding="@dimen/margin_8"
                 tools:ignore="ContentDescription" />
 
             <ImageView
@@ -48,7 +48,7 @@
                 android:id="@+id/tv_reaFeel_widget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/margin_16"
+                android:paddingStart="@dimen/margin_8"
                 tools:ignore="ContentDescription" />
 
             <ImageView
@@ -79,14 +79,14 @@
             android:id="@+id/quote_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/margin_8"
             tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/quote_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/margin_8"
             tools:ignore="ContentDescription" />
     </LinearLayout>
 
