--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -158,6 +158,12 @@
   <dimen name="text_view_30dp">
     30dp
   </dimen>
+  <dimen name="text_view_32dp">
+    32dp
+  </dimen>
+  <dimen name="text_view_34dp">
+    34dp
+  </dimen>
   <dimen name="text_view_36dp">
     36dp
   </dimen>
