--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -158,6 +158,12 @@
   <dimen name="text_view_30dp">
     40.0dp
   </dimen>
+  <dimen name="text_view_32dp">
+    42.67dp
+  </dimen>
+  <dimen name="text_view_34dp">
+    45.33dp
+  </dimen>
   <dimen name="text_view_36dp">
     48.0dp
   </dimen>
