--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -158,6 +158,12 @@
   <dimen name="text_view_30dp">
     45.0dp
   </dimen>
+  <dimen name="text_view_32dp">
+    48.0dp
+  </dimen>
+  <dimen name="text_view_34dp">
+    51.0dp
+  </dimen>
   <dimen name="text_view_36dp">
     54.0dp
   </dimen>
