--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     17.78dp
   </dimen>
+  <dimen name="text_view_22dp">
+    19.56dp
+  </dimen>
   <dimen name="text_view_24dp">
     21.33dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    24.89dp
   </dimen>
   <dimen name="text_view_30dp">
     26.67dp
