--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     20dp
   </dimen>
+  <dimen name="text_view_22dp">
+    22dp
+  </dimen>
   <dimen name="text_view_24dp">
     24dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    28dp
   </dimen>
   <dimen name="text_view_30dp">
     30dp
