--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     22.83dp
   </dimen>
+  <dimen name="text_view_22dp">
+    25.12dp
+  </dimen>
   <dimen name="text_view_24dp">
     27.4dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    31.97dp
   </dimen>
   <dimen name="text_view_30dp">
     34.25dp
