--- a/app/src/main/res/values-sw420dp/dimens.xml
+++ b/app/src/main/res/values-sw420dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     23.33dp
   </dimen>
+  <dimen name="text_view_22dp">
+    25.67dp
+  </dimen>
   <dimen name="text_view_24dp">
     28.0dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    32.67dp
   </dimen>
   <dimen name="text_view_30dp">
     35.0dp
