--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     30.0dp
   </dimen>
+  <dimen name="text_view_22dp">
+    33.0dp
+  </dimen>
   <dimen name="text_view_24dp">
     36.0dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    42.0dp
   </dimen>
   <dimen name="text_view_30dp">
     45.0dp
