--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -152,8 +152,14 @@
   <dimen name="text_view_20dp">
     33.33dp
   </dimen>
+  <dimen name="text_view_22dp">
+    36.67dp
+  </dimen>
   <dimen name="text_view_24dp">
     40.0dp
+  </dimen>
+  <dimen name="text_view_28dp">
+    46.67dp
   </dimen>
   <dimen name="text_view_30dp">
     50.0dp
