--- a/app/src/main/res/drawable/aqi_background.xml
+++ b/app/src/main/res/drawable/aqi_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:topLeftRadius="@dimen/margin_8"
-        android:bottomLeftRadius="@dimen/margin_8" />
+    <corners
+        android:bottomLeftRadius="@dimen/margin_8"
+        android:topLeftRadius="@dimen/margin_8" />
 </shape>
