--- a/app/src/main/res/drawable/circle_indicator.xml
+++ b/app/src/main/res/drawable/circle_indicator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/pureWhite" />
+    <solid android:color="#FFFFFFFF" />
     <stroke
         android:width="@dimen/indicator_stroke_width"
         android:color="@color/absoluteBlack" />
