--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:showIn="@layout/activity_welcome"
-    tools:ignore="SpUsage">
+    tools:ignore="SpUsage"
+    tools:showIn="@layout/activity_welcome">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
