--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -173,6 +173,9 @@
   <dimen name="text_view_36dp">
     36dp
   </dimen>
+  <dimen name="text_view_38dp">
+    38dp
+  </dimen>
   <dimen name="text_view_40dp">
     40dp
   </dimen>
