--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -173,6 +173,9 @@
   <dimen name="text_view_36dp">
     54.0dp
   </dimen>
+  <dimen name="text_view_38dp">
+    57.0dp
+  </dimen>
   <dimen name="text_view_40dp">
     60.0dp
   </dimen>
